Fix cropped text in lore

--- a/css/lore.css
+++ b/css/lore.css
@@ -1,5 +1,5 @@
 .tile {
-    height: 400px;
+    height: 450px;
     position: relative;
     text-shadow: 0px 0px 10px black;
 }
@@ -17,7 +17,7 @@
     position: absolute;
     width: 40%;
     top: 50px;
-    line-height: 1.2rem;
+    line-height: 1.3rem;
 }
 
 .right {
